This is 9.Framework after I reworkedit

--- a/RLRP.WebUI/Views/ProjectManager/Index.cshtml
+++ b/RLRP.WebUI/Views/ProjectManager/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<RLRP.Core.Models.Project>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Projects List";
 }
 
-<h2>Index</h2>
+<h3>Projects List<br><br /></h3>
 
 <p>
     @Html.ActionLink("Create New", "Create")
